--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation("net.kyori:adventure-text-minimessage:4.22.0")
     // asm
     implementation("org.ow2.asm:asm:9.8")
+    // janino 数学计算
+    implementation("org.codehaus.janino:janino:3.1.12")
 }
 
 shadowJar {
