--- a/src/main/resources/config/config.yml
+++ b/src/main/resources/config/config.yml
@@ -36,7 +36,7 @@ rarity_intensity: 0.5  # 越大压制越多
 # 玩家数据类
 original_max_health: 20
 original_max_mana: 50
-original_mana_recovery_speed: 0.2 #(每tick恢复0.4蓝量, 相当于1s恢复8)
+original_mana_recovery_speed: 0.2 #(每2tick恢复0.4蓝量, 相当于1s恢复4)
 
 # 原版属性组件是否覆盖式更新
 update:
