优化部分代码 增加placeholder可选依赖

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,10 @@ repositories {
         name = "CodeMC"
         url = uri("https://repo.codemc.io/repository/maven-public/")
     }
+    // place holder api
+    maven {
+        url = 'https://repo.extendedclip.com/releases/'
+    }
 }
 
 dependencies {
@@ -44,6 +48,8 @@ dependencies {
     implementation("org.ow2.asm:asm:9.8")
     // janino 数学计算
     implementation("org.codehaus.janino:janino:3.1.12")
+    // place holder api
+    compileOnly("me.clip:placeholderapi:2.11.6")
 }
 
 shadowJar {
