--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,7 +9,7 @@ load: STARTUP
 
 prefix: TerraCraft
 depend: [NBTAPI]
-softdepend: [MythicMobs]
+softdepend: [MythicMobs, PlaceholderAPI]
 
 commands:
   terracraft:
